[package]
name = "eth-p2p-crawler"
version = "0.1.0"
edition = "2024"
authors = ["Suyash Nayan <suyashnyn1@gmail.com>"]
description = "Ethereum P2P Network Crawler and Mempool Analyzer"
readme = "README.md"
repository = "https://github.com/7suyash7/eth-p2p-crawler"
license = "MIT OR Apache-2.0"
keywords = ["ethereum", "p2p", "blockchain", "mempool", "crawler"]
categories = ["cryptocurrency", "network-programming"]

[dependencies]
# Reth Network Stack & Primitives
# Using git dependencies pointing to the reth monorepo.
# Consider adding a specific 'rev = "..."' later for stability.
reth = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-network = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", default-features = false }

# Cryptography & Keys (Reth uses secp256k1 v0.28)
# In eth-p2p-crawler/Cargo.toml
secp256k1 = { version = "0.30.0", features = [ "global-context", "recovery" ] }

# Ethereum Types (Keep ethers-core for now, reth-primitives also provides types)
ethers-core = "2.0.14"
# ethereum-types = "0.15.1" # reth-primitives provides H256 etc, maybe remove this one? Let's try removing it.

# Async & Concurrency
tokio = { version = "1.44.2", features = ["full"] } # Match your previous version
futures-core = "0.3.31" # Keep standard futures
# tokio-stream = { version = "0.1", features = ["sync"] } # Often included via tokio, maybe remove direct dep?
async-trait = "0.1.88" # Keep standard async-trait
# parking_lot = "0.12" # Let's remove this unless we explicitly need it later

# CLI & Error Handling
clap = { version = "4.5.35", features = ["derive"] } # Keep CLI parsing
anyhow = "1.0.97" # Keep error handling

# Logging
tracing = "0.1.41" # Keep logging
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] } # Keep logging setup

# Utilities
# serde = { version = "1.0.219", features = ["derive"] } # Reth crates likely bring compatible versions
# serde_json = "1.0.140" # Remove unless needed for specific output
hex = "0.4.3" # Keep for hex encoding/decoding
# hex-literal = "0.4" # Remove unless explicitly needed
rand = "0.9.0" # Keep for key generation
futures-util = "0.3.31"
enr = "0.13.0"
dashmap = "6.1.0"
alloy-consensus = "0.14.0"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
tracing-appender = "0.2.3"
num-format = "0.4.4"

# TUI (Add later)
# ratatui = { version = "0.26" }
# crossterm = { version = "0.27" }
