[package]
name = "eth-p2p-crawler"
version = "0.1.0"
edition = "2024"
authors = ["Suyash Nayan <suyashnyn1@gmail.com>"]
description = "Ethereum P2P Network Crawler and Mempool Analyzer"
readme = "README.md"
repository = "https://github.com/7suyash7/eth-p2p-crawler"
license = "MIT OR Apache-2.0"
keywords = ["ethereum", "p2p", "blockchain", "mempool", "crawler"]
categories = ["cryptocurrency", "network-programming"]

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-network = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", default-features = false }

secp256k1 = { version = "0.30.0", features = [ "global-context", "recovery" ] }

ethers-core = "2.0.14"
tokio = { version = "1.44.2", features = ["full"] }
futures-core = "0.3.31"
async-trait = "0.1.88"

# CLI & Error Handling
clap = { version = "4.5.35", features = ["derive"] }
anyhow = "1.0.97" # Keep error handling

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

# Utilities
hex = "0.4.3"
rand = "0.9.0"
futures-util = "0.3.31"
enr = "0.13.0"
dashmap = "6.1.0"
alloy-consensus = "0.14.0"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
tracing-appender = "0.2.3"
num-format = "0.4.4"
sqlx = { version = "0.8.4", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
